[workspace]
# Use the newer version of the cargo resolver
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
members  = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["js2py_team"]
version = "0.1.0"
edition = "2021"
name = "js2py"

[workspace.dependencies]
js2py_lexer = { path = "crates/js2py_lexer" }
js2py_parser = { path = "crates/js2py_parser" }
js2py_translator = { path = "crates/js2py_translator" }
